--- a/services/superBouncer/package.json
+++ b/services/superBouncer/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.7.13",
     "@types/uuid": "^8.3.4",
     "amqplib": "^0.10.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.0",
