--- a/services/hook/package.json
+++ b/services/hook/package.json
@@ -4,13 +4,12 @@
     "start": "node ./bin/app.js",
     "dev": "ts-node ./src/app.ts"
   },
-  "name": "creator",
+  "name": "hook",
   "version": "1.0.0",
   "main": "src/app.ts",
   "author": "Abraxas",
   "license": "MIT",
   "dependencies": {
-    "@iota/client": "^3.0.0-alpha.7",
     "@types/node": "^18.7.13",
     "@types/uuid": "^8.3.4",
     "amqplib": "^0.10.2",
@@ -19,8 +18,7 @@
     "mongodb": "^4.9.0",
     "mongoose": "^6.5.2",
     "typescript": "^4.7.4",
-    "uuid": "^8.3.2",
-    "web3": "^1.7.5"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "ts-node": "^10.9.1"
