--- a/services/swagger/package.json
+++ b/services/swagger/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "swagger-ui-express": "^4.5.0"
   }
